--- a/microservice-simple-consumer-movie/pom.xml
+++ b/microservice-simple-consumer-movie/pom.xml
@@ -27,6 +27,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!-- 添加actuator依赖，可以提供监控 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<!-- 引入spring cloud依赖 -->
