chapter4：把服务注册到高可用的Eureka Server上

--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -33,6 +33,9 @@ logging:
 eureka: 
   client: 
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      # defaultZone: http://localhost:8761/eureka/
+      #这样就可以把服务注册到高可用的Eureka Server上，
+      #不过写一个地址也可以，因为Eureka Server之间会同步，建议把集群地址都写上
+      defaultZone: http://peer1:8761/eureka/,http://peer1:8761/eureka/
   instance: 
     prefer-ip-address: true
