chapter5：没有Eureka Server的情况下使用Ribbon，可以使用listOfServers配置微服务的地址

--- a/microservice-simple-provider-user/src/main/resources/application.yml
+++ b/microservice-simple-provider-user/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 server:
-  port: 8000
+  port: 8001
 
 spring:
+  application: 
+    name: microservice-provider-user
   datasource:
     url: jdbc:mysql://localhost:3306/spring-cloud-demo
     username: root
