--- a/microservice-consumer-movie-feign/src/main/resources/application.yml
+++ b/microservice-consumer-movie-feign/src/main/resources/application.yml
@@ -23,3 +23,15 @@ logging:
   
 user:
   userServiceUrl: http://localhost:8000/
+
+#开启feign的压缩功能  
+feign: 
+  compression: 
+    request:
+      enabled: true
+      #支持的媒体类型列表
+      mime-types: text/xml,application/xml,application/json
+      #请求的最小阈值
+      min-request-size: 2048
+    response:
+      enabled: true
